# projet_satellite

./: LICENSE  README.md  UCS-Satellite-Database 5-1-2023.csv  main.py  requirements.txt  setup.cfg
Entrees/: UCS-Satellite-Database 5-1-2023.csv  deck.yaml
SatelliteObservation/: __init__.py
SatelliteObservation/Affichage/: __init__.py  affichage.py  affichage_2.py  affichage_orbite.py  antenne.py  connection_satellites.py  connexion_satellites.py  orbite.py  terre.py  terre_2.py  trace_antenne.py
SatelliteObservation/DonneesEntree/: LecteurYAML.py  __init__.py  ajouter_mettre_a_jour_orbite.py  base_donnees.py  fichier_YAML.py
SatelliteObservation/ExtraFunctions/: __init__.py  affichage_console.py  choix_donnees_entree.py  get_user_input.py
SatelliteObservation/Satellite/: __init__.py  satellite.py
html/: .buildinfo  Affichage.html  SatelliteObservation.Affichage.html  SatelliteObservation.DonneesEntree.html  SatelliteObservation.ExtraFunctions.html  SatelliteObservation.Satellite.html  SatelliteObservation.html  genindex.html  index.html  main.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
html/_images/: image_sat.ppm
html/_sources/: SatelliteObservation.Affichage.rst.txt  SatelliteObservation.DonneesEntree.rst.txt  SatelliteObservation.ExtraFunctions.rst.txt  SatelliteObservation.Satellite.rst.txt  SatelliteObservation.rst.txt  index.rst.txt  modules.rst.txt
