[metadata]
name = SatelliteObservation
version = 0.1
author = Clélia Durandet / Baptiste Rouanet / Adrien Huyghebaert
description = This project studies satellite's orbits and various parameters from a database
long_description = This project takes data from a database to create the positions of the satellites. Those positions are used to have an animation of the satellites around the Earth, their orbits, their ability to communicate or not, and their antenna. 
keywords = satellites, orbit, animation
[options]
install_requires =
numpy
setuptools
matplotlib
pandas
PyYAML
